--- a/src/app/features/add-bonus/add-bonus.component.html
+++ b/src/app/features/add-bonus/add-bonus.component.html
@@ -12,6 +12,7 @@
         [bonuses]="bonuses"
         (bonusButtonClickedEvent)="openEditForm($event)"
         [bonusButtonLabel]="bonusButtonLabel"
+        [visibleChangeStatusBtn]="visibleChangeStatusBtn"
         class="bonus-list"
       ></app-bonus-list-view>
       <ng-template #loadingBlock>
