--- a/src/app/shared/components/bonus-list-container/bonus-list-view/bonus-list-view.component.html
+++ b/src/app/shared/components/bonus-list-container/bonus-list-view/bonus-list-view.component.html
@@ -8,5 +8,6 @@
     [bonusButtonLabel]="bonusButtonLabel"
     (bonusButtonClickedEvent)="bonusButtonClicked($event)"
     [ifBonusFromMap]="isFirst && ifBonusMap"
+    [visibleChangeStatusBtn]="visibleChangeStatusBtn"
   ></app-bonus>
 </div>
