feat: add bonus btn

--- a/src/app/shared/components/bonus-list-container/bonus/bonus.component.html
+++ b/src/app/shared/components/bonus-list-container/bonus/bonus.component.html
@@ -18,7 +18,13 @@
       </div>
       <ng-template #bonusButtonContent>
         <div class="button-container">
-          <button *ngIf="visibleChangeStatusBtn" mat-flat-button color="primary" [class.changeStatusBtnColorNotActive]="!bonus.isActive" (click)="changeStatus()">
+          <button
+            *ngIf="visibleChangeStatusBtn"
+            mat-flat-button
+            color="primary"
+            [class.changeStatusBtnColorNotActive]="!bonus.isActive"
+            (click)="changeStatus()"
+          >
             {{ 'home.changeStatus' | translate }}
           </button>
           <button mat-flat-button color="primary" class="apply-button" (click)="bonusButtonClick()">
