--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -1,6 +1,10 @@
 <section class="home">
   <section class="left">
-    <app-pick class="pick-container"></app-pick>
+    <button (click)="this.ifFindPlaceClick = !this.ifFindPlaceClick">Find Place
+    </button>
+    <div [ngStyle]="{'display':this.ifFindPlaceClick ? 'none' : 'block' }">
+      <app-pick class="pick-container"></app-pick>
+    </div>
     <app-bonus-list-container
       class="bonus-list"
       [bonusButtonLabel]="bonusButtonLabel"
