--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -1,8 +1,7 @@
 <section class="home">
   <section class="left">
-    <button (click)="this.ifFindPlaceClick = !this.ifFindPlaceClick">Find Place
-    </button>
-    <div [ngStyle]="{'display':this.ifFindPlaceClick ? 'none' : 'block' }">
+    <button (click)="this.ifFindPlaceClick = !this.ifFindPlaceClick">Find Place</button>
+    <div [ngStyle]="{ display: this.ifFindPlaceClick ? 'none' : 'block' }">
       <app-pick class="pick-container"></app-pick>
     </div>
     <app-bonus-list-container
