--- a/src/app/features/home/map/marker-icon/marker-icon.component.scss
+++ b/src/app/features/home/map/marker-icon/marker-icon.component.scss
@@ -1,22 +1,22 @@
 @import 'src/styles/variables';
 
 .marker-pin {
-  width: 15px;
-  height: 15px;
+  width: 25px;
+  height: 25px;
   background: #fff;
-  border: 6px solid $theme-color;
+  border: 7px solid $theme-color;
   box-shadow: -2px 2px 2px 0px #aaa;
   border-radius: 50% 50% 50% 0;
   transform: rotate(-45deg);
 
   mat-icon {
     text-align: center;
+    margin-top: 1px;
     margin-left: -1px;
-    margin-top: -1px;
     width: 100%;
     height: 100%;
     border-radius: 50%;
-    font-size: 100%;
+    font-size: 20px;
     transform: rotate(45deg);
   }
 }
