add new styles for bonus component

--- a/src/app/shared/components/bonus-list-container/bonus/bonus.component.html
+++ b/src/app/shared/components/bonus-list-container/bonus/bonus.component.html
@@ -36,7 +36,7 @@
         class="button-container"
         *ngIf="bonus?.isRated && bonus.isRated !== -1; else bonusButtonContent"
       >
-        Rated
+        <span class="rated-label">Rated</span>
       </div>
     </div>
   </div>
