--- a/src/app/shared/components/bonus-list-container/bonus/bonus.component.scss
+++ b/src/app/shared/components/bonus-list-container/bonus/bonus.component.scss
@@ -3,9 +3,10 @@
 .bonus-content {
   display: block;
   position: relative;
-  flex: 1 1 66.666666%;
+  width: 325px;
   padding: 6px;
   height: 100%;
+  box-sizing: border-box;
 }
 
 .discount-icon {
@@ -18,26 +19,34 @@
 
 .discount-value {
   color: #404040;
-  font-size: 16px;
+  font-size: 15px;
   font-weight: bold;
   padding: 5px;
   width: 195px;
   display: inline-flex;
+  max-height: 37px;
 }
 
 .bonus-name {
   color: #282828;
-  font-size: 27px;
+  font-size: 23px;
   font-weight: bold;
-  margin: 8px 0 0 8px;
+  //margin: 8px 0 0 8px;
+}
+
+.button-container {
+  display: flex;
+  justify-content: flex-end;
+  align-content: center;
+  padding-top: 2px;
 }
 
 .tags {
-  margin-top: 15px;
-  width: 320px;
-  height: 28px;
-  padding: 3px;
-  overflow-x: auto;
+  margin-top: 6px;
+  width: 313px;
+  height: 23px;
+  padding: 1px 0 5px;
+  overflow: auto hidden;
   &::-webkit-scrollbar {
     width: 0;
     height: 6px;
@@ -52,13 +61,23 @@
     user-select: none;
     border: 1px solid $theme-color;
     border-radius: 30px;
-    font-size: 18px;
+    font-size: 16px;
     font-weight: 400;
     color: #464646;
     padding: 0 7px;
     margin-right: 8px;
     text-transform: lowercase;
+    white-space: nowrap;
   }
+}
+
+.rated-label {
+  display: inline-block;
+  width: 120px;
+  height: 30px;
+  text-align: center;
+  line-height: 40px;
+  font-size: 24px;
 }
 
 .changeStatusBtnColorNotActive {
@@ -67,17 +86,11 @@
 
 .apply-button {
   border-radius: 0;
-  width: 187px;
-  height: 42px;
   box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
-  font-size: 26px;
-  font-weight: 500;
-  float: right;
-}
-
-.button-container {
-  height: 42px;
-  margin-top: 10px;
+  font-size: 22px;
+  font-weight: 400;
+  line-height: 30px;
+  height: 31px;
 }
 
 .show-form .description-container {
@@ -132,7 +145,7 @@
 .description-container {
   background-color: $theme-color;
   color: #fff;
-  flex: 1 1 33.33333%;
+  width: 145px;
   font-weight: 500;
   padding: 8px 5px;
   margin-left: -1px;
@@ -149,20 +162,25 @@
     text-decoration: underline;
     font-style: normal;
     font-size: 20px;
+    font-weight: 400;
+    text-align: center;
+    width: 100%;
+    display: inline-block;
   }
   .bonus-description {
-    font-size: 18px;
-    padding-top: 10px;
+    font-size: 16px;
+    padding-top: 6px;
     word-wrap: break-word;
+    font-weight: 400;
   }
 }
 
 @media (min-width: 541px), (min-device-width: 541px) {
   .bonus {
-    width: 520px;
+    width: 470px;
     border: 1px solid $theme-color;
     margin-bottom: 10px;
-    height: 200px;
+    height: 145px;
   }
 }
 
