add styles to change status button

--- a/src/app/shared/components/bonus-list-container/bonus/bonus.component.html
+++ b/src/app/shared/components/bonus-list-container/bonus/bonus.component.html
@@ -23,6 +23,7 @@
             mat-flat-button
             color="primary"
             [class.changeStatusBtnColorNotActive]="!bonus.isActive"
+            class="apply-button"
             (click)="changeStatus()"
           >
             {{ 'home.changeStatus' | translate }}
