--- a/src/app/shared/components/bonus-list-container/bonus/bonus.component.scss
+++ b/src/app/shared/components/bonus-list-container/bonus/bonus.component.scss
@@ -165,6 +165,10 @@
   }
 }
 
+.apply-button {
+  margin-left: 10px;
+}
+
 @media (min-width: 541px), (min-device-width: 541px) {
   .bonus {
     width: 470px;
