add label to slider

--- a/src/app/shared/components/rating/rate/rate.component.html
+++ b/src/app/shared/components/rating/rate/rate.component.html
@@ -3,6 +3,7 @@
   <app-stars [widthValue]="bonus?.rating * 10"></app-stars>
 </div>
 <div *ngIf="isForm" class="rate-form">
+  <span class="slider-value">{{ bonus.rating }}</span>
   <mat-slider
     id="ratingSlider"
     class="slider"
@@ -12,7 +13,7 @@
     (input)="onMatSliderChange($event)"
     [value]="startPosition"
   >
-  </mat-slider>
+</mat-slider>
   <div class="buttons-container">
     <button class="rate-form-button" (click)="backToBonus()" color="primary" mat-raised-button>
       Back
