--- a/src/app/shared/components/rating/rate/rate.component.scss
+++ b/src/app/shared/components/rating/rate/rate.component.scss
@@ -108,6 +108,6 @@
 .slider-value {
   position: absolute;
   font-size: 18px;
-  font-family: "Microsoft New Tai Lue", sans-serif;
+  font-family: 'Microsoft New Tai Lue', sans-serif;
   line-height: 10px;
 }
