--- a/src/app/features/home/home.component.scss
+++ b/src/app/features/home/home.component.scss
@@ -101,6 +101,9 @@ h2 {
   .pick-container {
     width: 100vw !important;
   }
+  .choice-container {
+    width: 100vw;
+  }
 }
 
 @media (max-device-width: 1150px), (max-width: 1150px) {
