--- a/src/styles.scss
+++ b/src/styles.scss
@@ -82,4 +82,7 @@ body {
   .home .bonus-container {
     margin-right: 20px;
   }
+  .mat-expansion-panel-body {
+    padding: 0 !important;
+  }
 }
