add responsive to 4k

--- a/src/app/features/add-bonus/add-bonus-button/add-bonus-button.component.scss
+++ b/src/app/features/add-bonus/add-bonus-button/add-bonus-button.component.scss
@@ -15,3 +15,10 @@
     width: 220px;
   }
 }
+
+@media (min-width: 2150px), (min-device-width: 2150px) {
+  .add-btn {
+    margin: 0;
+    width: 100%;
+  }
+}
